# pdf_translator

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
